--- a/surtidon-war/web/WEB-INF/web.xml
+++ b/surtidon-war/web/WEB-INF/web.xml
@@ -21,4 +21,23 @@
     <welcome-file-list>
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
+    <servlet-mapping>
+    <servlet-name>Faces Servlet</servlet-name>
+    <url-pattern>/faces/*</url-pattern>
+    <url-pattern>*.jsf</url-pattern>
+</servlet-mapping>
+<servlet>
+    <servlet-name>Resource Servlet</servlet-name>
+    <servlet-class>
+        org.primefaces.resource.ResourceServlet
+    </servlet-class>
+</servlet>
+<servlet-mapping>
+    <servlet-name>Resource Servlet</servlet-name>
+    <url-pattern>/primefaces_resource/*</url-pattern>
+</servlet-mapping>
+<context-param>
+    <param-name>com.sun.faces.allowTextChildren</param-name>
+    <param-value>true</param-value>
+</context-param>
 </web-app>
